EXTRA_DIST = \
    all-altitudemodes.kml all-altitudemodes-golden.kml \
    all-arrays.kml all-arrays-golden.kml \
    all-unknown-input.kml all-unknown-golden.kml \
    all-unknown-attrs-input.kml all-unknown-attrs-golden.kml \
    all-itemicon-states-input.kml all-itemicon-states-golden.kml \
    billion.kml ge-point.kml kmlsamples.kml model-macky.kml outline_space.kml \
    photooverlay-zermatt.kml
