EXTRA_DIST = \
    100_nested_folders.kml \
    101_nested_elements.kml \
    101_nested_folders.kml \
    all-altitudemodes-golden.kml \
    all-altitudemodes.kml \
    all-arrays-golden.kml \
    all-arrays.kml \
    all-itemicon-states-golden.kml \
    all-itemicon-states-input.kml \
    all-unknown-attrs-golden.kml \
    all-unknown-attrs-input.kml \
    all-unknown-golden.kml \
    all-unknown-input.kml \
    badcoords-golden.kml \
    badcoords.kml \
    billion.kml \
    ge-point.kml \
    gnis-ak-first-101.kml \
    golf-style.kml \
    invalid_descriptions.kml \
    kmlsamples.kml \
    model-macky.kml \
    old_schema_example.kml \
    outline_space.kml \
    photooverlay-zermatt.kml \
    schemadata.kml
