SUBDIRS = files kmzfiles rumsey
EXTRA_DIST = \
	bad.kmz \
	balloon-image-rel.kmz \
	camels.kml \
	doc.kml \
	doc.kmz \
	dummy.png \
	dummy2.png \
	model-macky.kmz \
	multikml-doc.kmz \
	multikml-nodoc.kmz \
	nokml.kmz \
	radar-animation.kmz \
	screenoverlay-continents.kmz \
	zermatt-photo.kmz \
	zermatt-photo-bad.kmz

