SUBDIRS = files kmzfiles rumsey
EXTRA_DIST = \
	bad-pk-data.kmz \
	bad-too-large.kmz \
	bad.kmz \
	balloon-image-rel.kmz \
	camels.kml \
	doc.kml \
	doc.kmz \
	dummy.png \
	dummy2.png \
	model-macky.kmz \
	multikml-doc.kmz \
	multikml-nodoc.kmz \
	nokml.kmz \
	overflow_bad_offset.kmz \
	overflow_corrupted_stack.kmz \
	overflow_unzOpenCurrentFile.kmz \
	overflow_unzReadCurrentFile.kmz \
	radar-animation.kmz \
	screenoverlay-continents.kmz \
	zermatt-photo.kmz \
	zermatt-photo-bad.kmz

