EXTRA_DIST = \
	allstyles-f0-highlight-check.kml \
	allstyles-f0-normal-check.kml \
	allstyles.kml \
	empty-style-check.kml \
	inline-style-f0-check.kml \
	inline-style.kml \
	inline-stylemap-pm0-highlight-check.kml \
	inline-stylemap-pm0-normal-check.kml \
	inline-stylemap.kml \
	shared-stylemap-pm0-highlight-check.kml \
	shared-stylemap-pm0-normal-check.kml \
	shared-stylemap.kml \
	simple-pm0-check.kml \
	simple-pm0-style.kml \
	simple.kml
