SUBDIRS = weather
EXTRA_DIST = \
	allstyles-f0-highlight-check.kml \
	allstyles-f0-normal-check.kml \
	allstyles.kml \
	dup-id.kml \
	dup-id-normal-check.kml \
	empty-style-check.kml \
	ge-point-inline-style-check.kml \
	iconstyle.kml \
	inline-style-f0-check.kml \
	inline-style.kml \
	inline-stylemap-pm0-highlight-check.kml \
	inline-stylemap-pm0-normal-check.kml \
	inline-stylemap.kml \
	kmlsamples-inline-style-check.kml \
	nesting.kml \
	remote-styleurl-document-check.kml \
	remote-styleurl-folder-check.kml \
	remote-styleurl-groundoverlay-check.kml \
	remote-styleurl-placemark-inline-check.kml \
	remote-styleurl-placemark-style-both-check.kml \
	remote-styleurl-screenoverlay-check.kml \
	remote-styleurl.kml \
	remote-styleurl.kmz \
	shared-stylemap-pm0-highlight-check.kml \
	shared-stylemap-pm0-normal-check.kml \
	shared-stylemap.kml \
	simple-pm0-check.kml \
	simple-pm0-style.kml \
	simple.kml \
	style-with-unknown-elements.kml \
	style-with-unknown-elements-jb-check.kml
