EXTRA_DIST = \
	california.kml \
	change-california-a.kml \
	change-california-a-check.kml \
	change-placemark-geometry.kml \
	change-placemark-geometry-check.kml \
	change-placemark-geometry2x.kml \
	change-placemark-geometry2x-check.kml \
	change-placemark-styleurl.kml \
	change-placemark-styleurl-check.kml \
	placemark.kml
