EXTRA_DIST = \
	california.kml \
	california-change-linestring.kml \
	california-change-linestring-check.kml \
	california-delete-ad.kml \
	california-delete-ad-check.kml \
	change-california-a.kml \
	change-california-a-check.kml \
	change-placemark-geometry.kml \
	change-placemark-geometry-check.kml \
	change-placemark-geometry2x.kml \
	change-placemark-geometry2x-check.kml \
	change-placemark-styleurl.kml \
	change-placemark-styleurl-check.kml \
	kmlsamples-change-many.kml \
	kmlsamples-change-many-check.kml \
	kmlsamples-delete-many.kml \
	kmlsamples-delete-many-check.kml \
	kmlsamples-multi-update.kml \
	kmlsamples-multi-update-check.kml \
	placemark.kml
